--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@fontsource/barlow-semi-condensed": "^5.2.6",
         "@fontsource/exo-2": "^5.2.6",
+        "aos": "^2.3.4",
         "clsx": "^2.0.0",
         "framer-motion": "^10.16.16",
         "lucide-react": "^0.294.0",
@@ -21,6 +22,7 @@
         "tailwind-merge": "^2.2.0"
     },
     "devDependencies": {
+        "@types/aos": "^3.0.7",
         "@types/node": "^20.10.5",
         "@types/react": "^18.2.45",
         "@types/react-dom": "^18.2.18",
