--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
         "@fontsource/exo-2": "^5.2.6",
         "aos": "^2.3.4",
         "clsx": "^2.0.0",
-        "framer-motion": "^10.16.16",
+        "framer-motion": "^10.18.0",
         "lucide-react": "^0.294.0",
         "next": "14.0.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-parallax-tilt": "^1.7.300",
         "tailwind-merge": "^2.2.0"
     },
     "devDependencies": {
