--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@fontsource/barlow-semi-condensed": "^5.2.6",
         "@fontsource/exo-2": "^5.2.6",
+        "@use-gesture/react": "^10.3.1",
         "aos": "^2.3.4",
         "clsx": "^2.0.0",
         "framer-motion": "^10.18.0",
@@ -20,6 +21,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-parallax-tilt": "^1.7.300",
+        "react-spring": "^10.0.1",
         "tailwind-merge": "^2.2.0"
     },
     "devDependencies": {
