--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@use-gesture/react": "^10.3.1",
         "aos": "^2.3.4",
         "clsx": "^2.0.0",
+        "firebase": "^11.10.0",
         "framer-motion": "^10.18.0",
         "lucide-react": "^0.294.0",
         "next": "14.0.4",
