--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.2.0",
         "react-parallax-tilt": "^1.7.300",
         "react-spring": "^10.0.1",
+        "resend": "^4.7.0",
         "tailwind-merge": "^2.2.0"
     },
     "devDependencies": {
